--- a/exercises/helm-basics/helm-app/podinfo.yaml
+++ b/exercises/helm-basics/helm-app/podinfo.yaml
@@ -2,7 +2,7 @@
 replicaCount: 1
 logLevel: debug
 ui:
-  message: "Hello <YOUR_NAME>"
+  message: "Hello Ties"
 
 serviceMonitor:
   enabled: false
@@ -25,7 +25,7 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-production
     kubernetes.io/ingress.class: nginx
   hosts:
-    - host: &host <YOUR_NAME>.<YOUR_DOMAIN>
+    - host: &host ties.dev.iks.guida.io
       paths:
         - path: /
           pathType: ImplementationSpecific
