Configure the cilium networkpolicy for podinfo

--- a/exercises/helm-basics/helm-app/netpol-app.yaml
+++ b/exercises/helm-basics/helm-app/netpol-app.yaml
@@ -3,12 +3,11 @@ apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
   name: podinfo
-  # TODO: fill in
-  namespace: ""
+  namespace: "fundamentals-training"
 spec:
   endpointSelector:
     matchLabels:
-      # TODO: fill in
+      app.kubernetes.io/name: podinfo
   ingress:
     - fromEndpoints:
         - matchLabels:
