--- a/repositories/podinfo.yaml
+++ b/repositories/podinfo.yaml
@@ -5,7 +5,6 @@ metadata:
   name: podinfo
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1m0s
   provider: generic
-  type: oci
-  url: oci://ghcr.io/stefanprodan/charts/podinfo
+  url: https://stefanprodan.github.io/podinfo
