--- a/exercises/kustomize-controller/staging/podinfo/patch.yaml
+++ b/exercises/kustomize-controller/staging/podinfo/patch.yaml
@@ -10,6 +10,7 @@ spec:
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: topology.kubernetes.io/zone
+          whenUnsatisfiable: DoNotSchedule
       containers:
         - name: podinfod
           env:
