--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: <NAMESPACE>
+  namespace: fundamentals-training
 spec:
   serviceAccountName: flux-reconciler
   interval: 10m
@@ -42,11 +42,11 @@ spec:
         kubernetes.io/ingress.class: nginx
         cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
-        - host: <YOUR_NAME>.<COMPANY>.app.guida.io
+        - host: tiesmaster.vinyl.app.guida.io
           paths:
             - path: /
               pathType: ImplementationSpecific
       tls:
         - secretName: podinfo-tls
           hosts:
-            - <YOUR_NAME>.<COMPANY>.app.guida.io
+            - tiesmaster.vinyl.app.guida.io
