Update source namespace for the helm repo

--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -15,6 +15,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: podinfo
+        namespace: fundamentals-training
   values:
     # Default values for podinfo.
     replicaCount: 1
