--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -15,7 +15,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: podinfo
-        namespace: fundamentals-training
+        namespace: flux-system
   values:
     # Default values for podinfo.
     replicaCount: 1
