--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -3,11 +3,10 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: fundamentals-training
+  namespace: flux-system
 spec:
-  serviceAccountName: flux-reconciler
   interval: 10m
-  targetNamespace: flux-system
+  targetNamespace: fundamentals-training
   chart:
     spec:
       chart: podinfo
@@ -15,7 +14,6 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: podinfo
-        namespace: flux-system
   values:
     # Default values for podinfo.
     replicaCount: 1
