--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: podinfo
+  name: podinfo2
   namespace: flux-system
 spec:
   interval: 10m
