Fix URL to the podinfo helm repo

--- a/repositories/podinfo.yaml
+++ b/repositories/podinfo.yaml
@@ -7,4 +7,4 @@ metadata:
 spec:
   interval: 1m0s
   provider: generic
-  url: https://stefanprodan.github.io/podinfo
+  url: oci://ghcr.io/stefanprodan/modules/podinfo
