--- a/repositories/podinfo.yaml
+++ b/repositories/podinfo.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  provider: generic
+  type: "OCI"
   url: oci://ghcr.io/stefanprodan/modules/podinfo
