--- a/repositories/podinfo.yaml
+++ b/repositories/podinfo.yaml
@@ -6,5 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m0s
-  type: "oci"
-  url: oci://ghcr.io/stefanprodan/modules/podinfo
+  url: https://stefanprodan.github.io/podinfo
