--- a/exercises/helm-controller/staging/podinfo/release.yaml
+++ b/exercises/helm-controller/staging/podinfo/release.yaml
@@ -41,11 +41,11 @@ spec:
         kubernetes.io/ingress.class: nginx
         cert-manager.io/cluster-issuer: letsencrypt-production
       hosts:
-        - host: tiesmaster.vinyl.app.guida.io
+        - host: tiesmaster.dev.iks.guida.io
           paths:
             - path: /
               pathType: ImplementationSpecific
       tls:
         - secretName: podinfo-tls
           hosts:
-            - tiesmaster.vinyl.app.guida.io
+            - tiesmaster.dev.iks.guida.io
